# CMakeList.txt : CMake project for HW1Problem8, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("HW1Problem8")

# Add source to this project's executable.
add_executable (HW1Problem8 "HW1Problem8.cpp" "HW1Problem8.h")

# TODO: Add tests and install targets if needed.
