# CMakeList.txt : CMake project for HW1Problem9, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("HW1Problem9")

# Add source to this project's executable.
add_executable (HW1Problem9 "HW1Problem9.cpp" "HW1Problem9.h")

# TODO: Add tests and install targets if needed.
