# CMakeList.txt : CMake project for Homework_Problem_7, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Homework_Problem_7")

# Add source to this project's executable.
add_executable (Homework_Problem_7 "Homework_Problem_7.cpp" "Homework_Problem_7.h")

# TODO: Add tests and install targets if needed.
